--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -287,7 +287,7 @@
                     <button type="button" class="btn" disabled$="{{!selectedTiles.length}}" on-click="packGroup">
                         Group
                     </button>
-                    <button type="button" class="btn" disabled$="{{!selectedTiles.length}}" on-click="unpackGroup">
+                    <button type="button" class="btn" disabled$="{{!getIsGroupSelection(selectedTiles, selectedTiles.length)}}" on-click="unpackGroup">
                         Ungroup
                     </button>
                 </div>
