Fix breadcrumb item names

--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -445,7 +445,7 @@
                 <template is="dom-repeat" items="{{breadcrumb}}">
                     <a href="javascript:" on-click="selectCrumbItem" item="{{item}}">
                         <span>&gt;</span>
-                        <span>{{item.name}}</span>
+                        <span>{{getCrumbName(item)}}</span>
                     </a>
                 </template>
             </div>
