Save showMore & showAdvanced values

--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -454,6 +454,9 @@
         <juicy-highlight id="highlightTileRollover" strokewidth="1" strokecolor="#1E90FF" strokeoffset="2" fill="rgba(0, 191, 255, 0.2)"></juicy-highlight>
         <juicy-highlight id="highlightTileSelected" strokewidth="2" strokecolor="#1E90FF" strokeoffset="2"></juicy-highlight>
         <juicy-highlight id="highlightScopeSelected" strokewidth="1" strokecolor="#C0C0C0" strokeoffset="2" overlay></juicy-highlight>
+
+        <iron-localstorage name="juicy-tile-editor#showMore" value="{{showMore}}"></iron-localstorage>
+        <iron-localstorage name="juicy-tile-editor#showAdvanced" value="{{showAdvanced}}"></iron-localstorage>
     </template>
     <script src="juicy-tile-simple-editor.js"></script>
 </dom-module>
