--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -18,9 +18,10 @@
                 overflow: visible;
                 display: block;
                 position: relative;
-                z-index: 1;
                 font: 15px Helvetica, arial, freesans, clean, sans-serif;
                 line-height: 22.1px;
+                position: fixed;
+                z-index: 1;
             }
 
             .editor-form {
