--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -29,7 +29,7 @@
                 border: none;
                 padding: 8px 10px;
                 border-radius: 8px;
-                font-size: 17px;
+                font-size: 15px;
                 cursor: pointer;
                 outline: none;
             }
@@ -130,21 +130,21 @@
         </style>
         <style>
             .editor-simple-form {
-                padding: 5px 0px 5px 20px;
-                margin-right: 150px;
+                padding: 10px 0px 5px 15px;
+                margin-right: 100px;
                 overflow: auto;
             }
 
             .editor-simple-form .editor-form-section {
                 float: left;
-                margin-right: 25px;
+                margin-right: 20px;
             }
 
             .editor-simple-form .save-section {
                 display: flex;
                 flex-direction: column;
-                width: 90px;
-                padding: 12px 0px;
+                width: 80px;
+                padding: 10px 0px;
             }
 
             .editor-simple-form .save-section button {
@@ -158,12 +158,14 @@
                 background-color: transparent;
                 background-position: center center;
                 background-repeat: no-repeat;
-                font-size: 11px;
+                font-size: 10px;
                 color: #b0b6b6;
-                height: 90px;
+                height: 85px;
                 box-sizing: border-box;
                 padding-bottom: 5px;
                 vertical-align: middle;
+                padding-left: 0px;
+                padding-right: 0px;
             }
 
             .editor-simple-form .media-section button.btn.active {
@@ -173,9 +175,9 @@
             .editor-simple-form .media-section button.btn.iphone {
                 background-image: url(images/iphone.svg);
                 background-position: bottom center;
-                background-size: 25px auto;
-                width: 50px;
-                padding-bottom: 30px;
+                background-size: 20px auto;
+                width: 40px;
+                padding-bottom: 20px;
                 margin-left: -10px;
             }
 
@@ -186,8 +188,9 @@
             .editor-simple-form .media-section button.btn.ipad {
                 background-image: url(images/ipad.svg);
                 background-position: bottom center;
-                background-size: 50px auto;
-                width: 50px;
+                background-size: 40px auto;
+                width: 40px;
+                padding-bottom: 50px;
             }
 
             .editor-simple-form .media-section button.btn.ipad.active {
@@ -197,8 +200,8 @@
             .editor-simple-form .media-section button.btn.laptop {
                 background-image: url(images/laptop.svg);
                 background-position: bottom center;
-                background-size: 110px auto;
-                width: 115px;
+                background-size: 90px auto;
+                width: 90px;
             }
 
             .editor-simple-form .media-section button.btn.laptop.active {
@@ -208,8 +211,8 @@
             .editor-simple-form .media-section button.btn.screen {
                 background-image: url(images/screen.svg);
                 background-position: bottom center;
-                background-size: 130px auto;
-                width: 135px;
+                background-size: 105px auto;
+                width: 105px;
             }
 
             .editor-simple-form .media-section button.btn.screen.active {
@@ -224,36 +227,36 @@
                 text-align: center;
                 display: block;
                 font-size: 15px;
-                margin: 15px 0px 5px 0px;
+                margin: 10px 0px 5px 0px;
             }
 
             .editor-simple-form .width-section .btn-group {
                 overflow: visible;
-                border-top: 5px dotted #787b80;
-                border-bottom: 5px dotted #787b80;
-                height: 40px;
+                border-top: 4px dotted #787b80;
+                border-bottom: 4px dotted #787b80;
+                height: 35px;
             }
 
             .editor-simple-form .width-section .btn-group button.btn {
-                border-right: 5px dotted #787b80;
+                border-right: 4px dotted #787b80;
                 float: left;
                 color: #afb5b5;
                 background-color: transparent;
                 border-radius: 0px;
                 padding-top: 3px;
                 padding-bottom: 3px;
-                font-size: 14px;
-                height: 40px;
+                font-size: 13px;
+                height: 35px;
             }
 
             .editor-simple-form .width-section .btn-group button.btn.active,
             .editor-simple-form .width-section .btn-group button.btn.active:first-child {
                 background-color: #21b3cf;
-                border: 5px solid #21b3cf;
+                border: 4px solid #21b3cf;
                 border-left: none;
                 color: white;
-                margin: -5px 0px;
-                height: 50px;
+                margin: -4px 0px;
+                height: 43px;
             }
 
             .editor-simple-form .width-section .btn-group button.btn:first-child {
@@ -277,17 +280,17 @@
             }
 
             .editor-simple-form .position-section {
-                padding-top: 42px;
+                padding-top: 38px;
             }
 
             .editor-simple-form .position-section .btn {
                 border-radius: 0px;
                 background-color: #3e494c;
-                width: 50px;
-                height: 50px;
+                width: 40px;
+                height: 40px;
                 background-position: center center;
                 background-repeat: no-repeat;
-                background-size: 28px 28px;
+                background-size: 20px 20px;
             }
 
             .editor-simple-form .position-section .btn.btn-up,
@@ -309,18 +312,18 @@
             }
 
             .editor-simple-form .visible-section {
-                padding-top: 40px;
+                padding-top: 37px;
                 margin-right: 0px;
             }
 
             .editor-simple-form .visible-section .btn {
                 border-radius: 0px;
                 background-color: transparent;
-                width: 50px;
-                height: 50px;
+                width: 40px;
+                height: 40px;
                 background-position: center center;
                 background-repeat: no-repeat;
-                background-size: 45px 45px;
+                background-size: 35px 35px;
             }
 
             .editor-simple-form .visible-section .btn.btn-visible {
