--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -20,7 +20,7 @@
                 line-height: 22.1px;
                 position: fixed;
                 z-index: 1;
-                min-height: 126px;
+                min-height: 100px;
             }
 
             .btn {
@@ -49,7 +49,7 @@
                 float: right;
                 background-color: #3e494c;
                 width: 100px;
-                height: 124px;
+                height: 115px;
             }
 
             .editor-tabs button {
@@ -69,7 +69,7 @@
 
             .editor-tabs button.btn-tab {
                 background-color: #596567;
-                height: 50px;
+                height: 43px;
             }
 
             .editor-tabs button.active {
@@ -93,11 +93,11 @@
 
             .editor-tree {
                 position: fixed;
-                height: calc(100vh - 126px);
-                max-height: calc(100vh - 126px);
+                height: calc(100vh - 115px);
+                max-height: calc(100vh - 115px);
                 right: 0px;
                 width: 220px;
-                top: 126px;
+                top: 115px;
                 background-color: #252526;
                 box-sizing: border-box;
                 padding: 0px;
@@ -130,9 +130,11 @@
         </style>
         <style>
             .editor-simple-form {
-                padding: 10px 0px 5px 15px;
+                padding: 8px 0px 0px 15px;
                 margin-right: 100px;
                 overflow: auto;
+                height: 115px;
+                box-sizing: border-box;
             }
 
             .editor-simple-form .editor-form-section {
@@ -339,8 +341,8 @@
                 padding: 5px 0px 5px 10px;
                 margin-right: 100px;
                 overflow: auto;
-                max-width: 1100px;
-                background-color: #F0F0F0;
+                height: 115px;
+                box-sizing: border-box;
             }
 
             .editor-expert-form .btn-range,
@@ -366,7 +368,6 @@
             .editor-expert-form .editor-form-section {
                 float: left;
                 margin-right: 10px;
-                min-height: 125px;
             }
 
             .editor-expert-form .save-section {
@@ -502,9 +503,9 @@
                 color: #afb5b5;
                 background-color: transparent;
                 border-radius: 0px;
-                padding: 0px 6.5px;
+                padding: 0px 1.5px;
                 height: 25px;
-                width: 25px;
+                width: 23px;
                 box-sizing: border-box;
                 overflow: hidden;
                 font-size: 10px;
@@ -544,7 +545,7 @@
 
             .editor-expert-form .position-section {
                 float: left;
-                margin-right: 30px;
+                margin-right: 15px;
                 margin-left: 2px;
             }
 
@@ -578,7 +579,7 @@
 
             .editor-expert-form .group-section {
                 float: left;
-                margin-right: 20px;
+                margin-right: 10px;
                 margin-top: 3px;
             }
 
@@ -632,7 +633,7 @@
             .editor-expert-form .dimension-section .control-group {
                 display: flex;
                 flex-direction: row;
-                padding: 2px 5px 2px 7px;
+                padding: 2px 3px;
                 border-radius: 4px;
                 background-color: #3e494c;
                 height: 22px;
@@ -719,7 +720,7 @@
                 background-color: #3e494c;
                 padding: 5px;
                 min-height: 0px;
-                margin-top: 5px;
+                margin-top: 10px;
             }
 
             .editor-expert-form .tight-section,
@@ -734,7 +735,6 @@
             }
 
             .editor-expert-form .tight-direction-html-source-section label.checkbox {
-                
                 text-align: center;
                 display: block;
             }
