--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -149,9 +149,9 @@
             .editor-simple-form {
                 padding: 8px 0px 0px 15px;
                 margin-right: 100px;
-                overflow: auto;
                 height: 115px;
                 box-sizing: border-box;
+                overflow: hidden;
             }
 
             .editor-simple-form .editor-form-section {
@@ -505,10 +505,20 @@
             }
 
             .editor-expert-form .gutter-section .btn-group {
-                border: 4px dotted #b0b6b6;
-                border-left: none;
-                border-right: none;
                 padding: 3px 0px;
+            }
+
+            .editor-expert-form .gutter-section .gutter-border {
+                border-top: 4px dotted #b0b6b6;
+                padding: 0px;
+                margin: 0px;
+            }
+
+            /* Need this hack because FF starts dotted border before the container starts, and ends before the container ends. */
+            @-moz-document url-prefix() {
+                .editor-expert-form .gutter-section .gutter-border {
+                    margin-right: -2px;
+                }
             }
 
             .editor-expert-form .gutter-section input {
@@ -550,6 +560,7 @@
                 box-sizing: border-box;
                 overflow: hidden;
                 font-size: 10px;
+                line-height: 11px;
             }
 
             .editor-expert-form .width-section .btn-group button.btn.active,
@@ -735,6 +746,7 @@
                 color: white;
                 font-size: 12px;
                 padding-left: 5px;
+                flex: auto;
             }
 
             .editor-expert-form .dimension-section .btn-range {
@@ -977,11 +989,13 @@
                 </div>
                 <div class="editor-form-section gutter-section">
                     <label>Gutter</label>
+                    <div class="gutter-border"></div>
                     <div class="btn-group">
                         <input type="text" value="{{gutter::change}}" disabled$="{{!getIsGroupSelection(selectedTiles, selectedTiles.length)}}" />
                         <button class="btn-range" disabled$="{{!getIsGroupSelection(selectedTiles, selectedTiles.length)}}" on-click="gutterPlus">+</button>
                         <button class="btn-range" disabled$="{{!getIsGroupSelection(selectedTiles, selectedTiles.length)}}" on-click="gutterMinus">-</button>
                     </div>
+                    <div class="gutter-border"></div>
                 </div>
                 <div class="editor-form-section">
                     <div class="width-section">
