Reset github-markdown-css rules affecting bled ShadowCSS

--- a/examples/juicy-tile-table/simple.html
+++ b/examples/juicy-tile-table/simple.html
@@ -71,6 +71,9 @@
             box-sizing: border-box;
         }
         /* Override github-markdown styles affecting bled ShadowDOM in shimmed browsers */
+        table.juicy-tile-table{
+            display: table;
+        }
         table.juicy-tile-table > .juicy-shadow-row>td{
             border: 0;
             margin: 0;
